# ft_linear_regression

./: .gitignore  README.md  makefile  pyproject.toml
src/: estimate_value.py  main.py  train_model.py  train_model_range.py
src/ft_linear_regression/: config.py  estimate.py  load_data.py  plot.py  train.py
