[project]
name = "ft-linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "Fra",email = "francesco.aru25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "ft_linear_regression", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
